--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <article>
         <h1>Representative Jim Cooper</h1>
         <section>
-            <p class="description">Representative for Tennessee's 5th congressional district>
-            <p>Democratic</p>
+            <p class="description">Democratic Representative for Tennessee's 5th Congressional District
         </section>
     </article>
     <section>
-        <header><strong>Committe Involved In:</strong></header>
+        <header class="committes"><strong>Committes Involved In:</strong>
         <ul>
             <li>Independent Audit Committe</li>
             <li>Public Works Committe</li>
